# mboxer

./: .env.example  .gitignore  HOWTO.md  LICENSE.md  README.md  mboxer-current-config.yaml  pyproject.toml  schema_ingest_tracking.sql
.agents/: SKILL.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: bandit.yml  ci.yml  dependency-review.yml  publish.yml  release.yml  schema.yml
config/: mboxer.example.yaml
docs/: architecture.md  naming-conventions.md  notebooklm-limits.md  security-roadmap.md  sqlite-schema.md
prompts/: claude-code-mboxer-current.md
src/mboxer/: __init__.py  __main__.py  accounts.py  attachments.py  classify.py  cli.py  config.py  ingest.py  limits.py  naming.py  normalize.py  taxonomy.py
src/mboxer/db/: __init__.py  schema.py  schema.sql
src/mboxer/db/migrations/: 001_initial.sql  002_multi_account.sql
src/mboxer/exporters/: jsonl.py  manifest.py  notebooklm.py
src/mboxer/security/: policy.py  scan.py  scrub.py
tests/: test_accounts.py  test_classify.py  test_config.py  test_db.py  test_export.py  test_first_run.py  test_ingest.py  test_limits.py  test_manifest.py  test_migration.py  test_naming.py  test_normalize.py  test_taxonomy.py
tests/fixtures/: make_synthetic.py
