[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uscient-mboxer"
dynamic = ["version"]
description = "Local-first MBOX archive processor for personal data control, search, export, and NotebookLM source packs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "uScient" }
]
dependencies = [
  "PyYAML>=6.0.1",
  "requests>=2.31.0"
]
keywords = [
  "mbox",
  "email",
  "gmail",
  "sqlite",
  "local-first",
  "privacy",
  "personal-knowledge",
  "notebooklm",
  "rag",
  "archive"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Database",
  "Topic :: Utilities"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "types-PyYAML>=6.0.1"
]
pdf = [
  "fpdf2>=2.7.9"
]

[project.urls]
Homepage = "https://uscient.com"
Repository = "https://github.com/uscient/mboxer"
Issues = "https://github.com/uscient/mboxer/issues"

[project.scripts]
mboxer = "mboxer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mboxer = ["db/schema.sql", "db/migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
